Phase-3/y.output
Terminals unused in grammar

   MOD_ASSIGN
   MOD
   SHORT
   LONG
   STRING


State 43 conflicts: 1 shift/reduce
State 49 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration

    6 varDeclaration: typeSpecifier varDeclList ';'

    7 varDeclList: varDeclList ',' varDeclInitialize
    8            | varDeclInitialize

    9 varDeclInitialize: varDecId
   10                  | varDecId ASSIGN simpleExpression

   11 varDecId: identifier
   12         | identifier '[' INT_CONSTANT ']'

   13 typeSpecifier: typeSpecifier pointer
   14              | INT
   15              | VOID
   16              | CHAR

   17 pointer: MULTIPLY pointer
   18        | MULTIPLY

   19 funDeclaration: typeSpecifier identifier '(' params ')' statement
   20               | IDENTIFIER '(' params ')' statement

   21 params: paramList
   22       | %empty

   23 paramList: paramList ',' paramTypeList
   24          | paramTypeList

   25 paramTypeList: typeSpecifier paramId

   26 paramId: IDENTIFIER
   27        | IDENTIFIER '[' ']'

   28 statement: expressionStmt
   29          | compoundStmt
   30          | selectionStmt
   31          | iterationStmt
   32          | jumpStmt
   33          | returnStmt
   34          | breakStmt
   35          | varDeclaration

   36 compoundStmt: '{' statementList '}'

   37 statementList: statementList statement
   38              | %empty

   39 expressionStmt: expression ';'
   40               | ';'

   41 selectionStmt: IF '(' simpleExpression ')' statement
   42              | IF '(' simpleExpression ')' statement ELSE statement

   43 iterationStmt: WHILE '(' simpleExpression ')' statement
   44              | DO statement WHILE '(' expression ')' ';'
   45              | FOR '(' optExpression ';' optExpression ';' optExpression ')' statement

   46 optExpression: expression
   47              | %empty

   48 jumpStmt: GOTO IDENTIFIER ';'
   49         | CONTINUE ';'

   50 returnStmt: RETURN ';'
   51           | RETURN expression

   52 breakStmt: BREAK ';'

   53 expression: mutable ASSIGN expression
   54           | mutable ADD_ASSIGN expression
   55           | mutable SUB_ASSIGN expression
   56           | mutable MUL_ASSIGN expression
   57           | mutable DIV_ASSIGN expression
   58           | mutable INCREMENT
   59           | mutable DECREMENT
   60           | simpleExpression

   61 simpleExpression: simpleExpression LG_OR andExpression
   62                 | andExpression

   63 andExpression: andExpression LG_AND unaryRelExpression
   64              | unaryRelExpression

   65 unaryRelExpression: NOT unaryRelExpression
   66                   | relExpression

   67 relExpression: sumExpression GREATER_THAN sumExpression
   68              | sumExpression LESSER_THAN sumExpression
   69              | sumExpression LESS_EQ sumExpression
   70              | sumExpression GREATER_EQ sumExpression
   71              | sumExpression NOT_EQ sumExpression
   72              | sumExpression EQUAL sumExpression
   73              | sumExpression

   74 sumExpression: sumExpression ADD term
   75              | sumExpression SUBTRACT term
   76              | term

   77 term: term MULTIPLY unaryExpression
   78     | term DIVIDE unaryExpression
   79     | unaryExpression

   80 unaryExpression: ADD unaryExpression
   81                | SUBTRACT unaryExpression
   82                | factor

   83 factor: immutable
   84       | mutable

   85 mutable: IDENTIFIER
   86        | mutable '[' expression ']'

   87 immutable: '(' expression ')'
   88          | call
   89          | const_type

   90 call: IDENTIFIER '(' args ')'

   91 args: argList
   92     | %empty

   93 argList: argList ',' expression
   94        | expression

   95 const_type: DEC_CONSTANT
   96           | INT_CONSTANT
   97           | HEX_CONSTANT

   98 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 20 41 42 43 44 45 87 90
')' (41) 19 20 41 42 43 44 45 87 90
',' (44) 7 23 93
';' (59) 6 39 40 44 45 48 49 50 52
'[' (91) 12 27 86
']' (93) 12 27 86
'{' (123) 36
'}' (125) 36
error (256)
ADD (258) 74 80
SUBTRACT (259) 75 81
MULTIPLY (260) 17 18 77
DIVIDE (261) 78
ASSIGN (262) 10 53
ADD_ASSIGN (263) 54
SUB_ASSIGN (264) 55
MUL_ASSIGN (265) 56
DIV_ASSIGN (266) 57
MOD_ASSIGN (267)
MOD (268)
GREATER_THAN (269) 67
LESSER_THAN (270) 68
LESS_EQ (271) 69
GREATER_EQ (272) 70
NOT_EQ (273) 71
EQUAL (274) 72
VOID (275) 15
IF (276) 41 42
ELSE (277) 42
FOR (278) 45
DO (279) 44
WHILE (280) 43 44
GOTO (281) 48
BREAK (282) 52
CONTINUE (283) 49
RETURN (284) 50 51
INT (285) 14
SHORT (286)
LONG (287)
CHAR (288) 16
LG_OR (289) 61
LG_AND (290) 63
NOT (291) 65
DECREMENT (292) 59
INCREMENT (293) 58
HEX_CONSTANT (294) 97
DEC_CONSTANT (295) 95
INT_CONSTANT (296) 12 96
STRING (297)
IDENTIFIER (298) 20 26 27 48 85 90 98
IFX (299)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
declarationList (55)
    on left: 2 3, on right: 1 2
declaration (56)
    on left: 4 5, on right: 2 3
varDeclaration (57)
    on left: 6, on right: 4 35
varDeclList (58)
    on left: 7 8, on right: 6 7
varDeclInitialize (59)
    on left: 9 10, on right: 7 8
varDecId (60)
    on left: 11 12, on right: 9 10
typeSpecifier (61)
    on left: 13 14 15 16, on right: 6 13 19 25
pointer (62)
    on left: 17 18, on right: 13 17
funDeclaration (63)
    on left: 19 20, on right: 5
params (64)
    on left: 21 22, on right: 19 20
paramList (65)
    on left: 23 24, on right: 21 23
paramTypeList (66)
    on left: 25, on right: 23 24
paramId (67)
    on left: 26 27, on right: 25
statement (68)
    on left: 28 29 30 31 32 33 34 35, on right: 19 20 37 41 42 43 44
    45
compoundStmt (69)
    on left: 36, on right: 29
statementList (70)
    on left: 37 38, on right: 36 37
expressionStmt (71)
    on left: 39 40, on right: 28
selectionStmt (72)
    on left: 41 42, on right: 30
iterationStmt (73)
    on left: 43 44 45, on right: 31
optExpression (74)
    on left: 46 47, on right: 45
jumpStmt (75)
    on left: 48 49, on right: 32
returnStmt (76)
    on left: 50 51, on right: 33
breakStmt (77)
    on left: 52, on right: 34
expression (78)
    on left: 53 54 55 56 57 58 59 60, on right: 39 44 46 51 53 54 55
    56 57 86 87 93 94
simpleExpression (79)
    on left: 61 62, on right: 10 41 42 43 60 61
andExpression (80)
    on left: 63 64, on right: 61 62 63
unaryRelExpression (81)
    on left: 65 66, on right: 63 64 65
relExpression (82)
    on left: 67 68 69 70 71 72 73, on right: 66
sumExpression (83)
    on left: 74 75 76, on right: 67 68 69 70 71 72 73 74 75
term (84)
    on left: 77 78 79, on right: 74 75 76 77 78
unaryExpression (85)
    on left: 80 81 82, on right: 77 78 79 80 81
factor (86)
    on left: 83 84, on right: 82
mutable (87)
    on left: 85 86, on right: 53 54 55 56 57 58 59 84 86
immutable (88)
    on left: 87 88 89, on right: 83
call (89)
    on left: 90, on right: 88
args (90)
    on left: 91 92, on right: 90
argList (91)
    on left: 93 94, on right: 91 93
const_type (92)
    on left: 95 96 97, on right: 89
identifier (93)
    on left: 98, on right: 11 12 19


State 0

    0 $accept: . program $end

    VOID        shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    IDENTIFIER  shift, and go to state 4

    program          go to state 5
    declarationList  go to state 6
    declaration      go to state 7
    varDeclaration   go to state 8
    typeSpecifier    go to state 9
    funDeclaration   go to state 10


State 1

   15 typeSpecifier: VOID .

    $default  reduce using rule 15 (typeSpecifier)


State 2

   14 typeSpecifier: INT .

    $default  reduce using rule 14 (typeSpecifier)


State 3

   16 typeSpecifier: CHAR .

    $default  reduce using rule 16 (typeSpecifier)


State 4

   20 funDeclaration: IDENTIFIER . '(' params ')' statement

    '('  shift, and go to state 11


State 5

    0 $accept: program . $end

    $end  shift, and go to state 12


State 6

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    VOID        shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration     go to state 13
    varDeclaration  go to state 8
    typeSpecifier   go to state 9
    funDeclaration  go to state 10


State 7

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 8

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 9

    6 varDeclaration: typeSpecifier . varDeclList ';'
   13 typeSpecifier: typeSpecifier . pointer
   19 funDeclaration: typeSpecifier . identifier '(' params ')' statement

    MULTIPLY    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    varDeclList        go to state 16
    varDeclInitialize  go to state 17
    varDecId           go to state 18
    pointer            go to state 19
    identifier         go to state 20


State 10

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 11

   20 funDeclaration: IDENTIFIER '(' . params ')' statement

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    CHAR  shift, and go to state 3

    $default  reduce using rule 22 (params)

    typeSpecifier  go to state 21
    params         go to state 22
    paramList      go to state 23
    paramTypeList  go to state 24


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 14

   17 pointer: MULTIPLY . pointer
   18        | MULTIPLY .

    $default  reduce using rule 18 (pointer)

    pointer  go to state 25


State 15

   98 identifier: IDENTIFIER .

    $default  reduce using rule 98 (identifier)


State 16

    6 varDeclaration: typeSpecifier varDeclList . ';'
    7 varDeclList: varDeclList . ',' varDeclInitialize

    ','  shift, and go to state 26
    ';'  shift, and go to state 27


State 17

    8 varDeclList: varDeclInitialize .

    $default  reduce using rule 8 (varDeclList)


State 18

    9 varDeclInitialize: varDecId .
   10                  | varDecId . ASSIGN simpleExpression

    ASSIGN  shift, and go to state 28

    $default  reduce using rule 9 (varDeclInitialize)


State 19

   13 typeSpecifier: typeSpecifier pointer .

    $default  reduce using rule 13 (typeSpecifier)


State 20

   11 varDecId: identifier .
   12         | identifier . '[' INT_CONSTANT ']'
   19 funDeclaration: typeSpecifier identifier . '(' params ')' statement

    '['  shift, and go to state 29
    '('  shift, and go to state 30

    $default  reduce using rule 11 (varDecId)


State 21

   13 typeSpecifier: typeSpecifier . pointer
   25 paramTypeList: typeSpecifier . paramId

    MULTIPLY    shift, and go to state 14
    IDENTIFIER  shift, and go to state 31

    pointer  go to state 19
    paramId  go to state 32


State 22

   20 funDeclaration: IDENTIFIER '(' params . ')' statement

    ')'  shift, and go to state 33


State 23

   21 params: paramList .
   23 paramList: paramList . ',' paramTypeList

    ','  shift, and go to state 34

    $default  reduce using rule 21 (params)


State 24

   24 paramList: paramTypeList .

    $default  reduce using rule 24 (paramList)


State 25

   17 pointer: MULTIPLY pointer .

    $default  reduce using rule 17 (pointer)


State 26

    7 varDeclList: varDeclList ',' . varDeclInitialize

    IDENTIFIER  shift, and go to state 15

    varDeclInitialize  go to state 35
    varDecId           go to state 18
    identifier         go to state 36


State 27

    6 varDeclaration: typeSpecifier varDeclList ';' .

    $default  reduce using rule 6 (varDeclaration)


State 28

   10 varDeclInitialize: varDecId ASSIGN . simpleExpression

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    '('           shift, and go to state 44

    simpleExpression    go to state 45
    andExpression       go to state 46
    unaryRelExpression  go to state 47
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 53
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 29

   12 varDecId: identifier '[' . INT_CONSTANT ']'

    INT_CONSTANT  shift, and go to state 57


State 30

   19 funDeclaration: typeSpecifier identifier '(' . params ')' statement

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    CHAR  shift, and go to state 3

    $default  reduce using rule 22 (params)

    typeSpecifier  go to state 21
    params         go to state 58
    paramList      go to state 23
    paramTypeList  go to state 24


State 31

   26 paramId: IDENTIFIER .
   27        | IDENTIFIER . '[' ']'

    '['  shift, and go to state 59

    $default  reduce using rule 26 (paramId)


State 32

   25 paramTypeList: typeSpecifier paramId .

    $default  reduce using rule 25 (paramTypeList)


State 33

   20 funDeclaration: IDENTIFIER '(' params ')' . statement

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    VOID          shift, and go to state 1
    IF            shift, and go to state 60
    FOR           shift, and go to state 61
    DO            shift, and go to state 62
    WHILE         shift, and go to state 63
    GOTO          shift, and go to state 64
    BREAK         shift, and go to state 65
    CONTINUE      shift, and go to state 66
    RETURN        shift, and go to state 67
    INT           shift, and go to state 2
    CHAR          shift, and go to state 3
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    ';'           shift, and go to state 68
    '('           shift, and go to state 44
    '{'           shift, and go to state 69

    varDeclaration      go to state 70
    typeSpecifier       go to state 71
    statement           go to state 72
    compoundStmt        go to state 73
    expressionStmt      go to state 74
    selectionStmt       go to state 75
    iterationStmt       go to state 76
    jumpStmt            go to state 77
    returnStmt          go to state 78
    breakStmt           go to state 79
    expression          go to state 80
    simpleExpression    go to state 81
    andExpression       go to state 46
    unaryRelExpression  go to state 47
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 82
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 34

   23 paramList: paramList ',' . paramTypeList

    VOID  shift, and go to state 1
    INT   shift, and go to state 2
    CHAR  shift, and go to state 3

    typeSpecifier  go to state 21
    paramTypeList  go to state 83


State 35

    7 varDeclList: varDeclList ',' varDeclInitialize .

    $default  reduce using rule 7 (varDeclList)


State 36

   11 varDecId: identifier .
   12         | identifier . '[' INT_CONSTANT ']'

    '['  shift, and go to state 29

    $default  reduce using rule 11 (varDecId)


State 37

   80 unaryExpression: ADD . unaryExpression

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    '('           shift, and go to state 44

    unaryExpression  go to state 84
    factor           go to state 52
    mutable          go to state 53
    immutable        go to state 54
    call             go to state 55
    const_type       go to state 56


State 38

   81 unaryExpression: SUBTRACT . unaryExpression

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    '('           shift, and go to state 44

    unaryExpression  go to state 85
    factor           go to state 52
    mutable          go to state 53
    immutable        go to state 54
    call             go to state 55
    const_type       go to state 56


State 39

   65 unaryRelExpression: NOT . unaryRelExpression

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    '('           shift, and go to state 44

    unaryRelExpression  go to state 86
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 53
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 40

   97 const_type: HEX_CONSTANT .

    $default  reduce using rule 97 (const_type)


State 41

   95 const_type: DEC_CONSTANT .

    $default  reduce using rule 95 (const_type)


State 42

   96 const_type: INT_CONSTANT .

    $default  reduce using rule 96 (const_type)


State 43

   85 mutable: IDENTIFIER .
   90 call: IDENTIFIER . '(' args ')'

    '('  shift, and go to state 87

    '('       [reduce using rule 85 (mutable)]
    $default  reduce using rule 85 (mutable)


State 44

   87 immutable: '(' . expression ')'

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    '('           shift, and go to state 44

    expression          go to state 88
    simpleExpression    go to state 81
    andExpression       go to state 46
    unaryRelExpression  go to state 47
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 82
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 45

   10 varDeclInitialize: varDecId ASSIGN simpleExpression .
   61 simpleExpression: simpleExpression . LG_OR andExpression

    LG_OR  shift, and go to state 89

    $default  reduce using rule 10 (varDeclInitialize)


State 46

   62 simpleExpression: andExpression .
   63 andExpression: andExpression . LG_AND unaryRelExpression

    LG_AND  shift, and go to state 90

    $default  reduce using rule 62 (simpleExpression)


State 47

   64 andExpression: unaryRelExpression .

    $default  reduce using rule 64 (andExpression)


State 48

   66 unaryRelExpression: relExpression .

    $default  reduce using rule 66 (unaryRelExpression)


State 49

   67 relExpression: sumExpression . GREATER_THAN sumExpression
   68              | sumExpression . LESSER_THAN sumExpression
   69              | sumExpression . LESS_EQ sumExpression
   70              | sumExpression . GREATER_EQ sumExpression
   71              | sumExpression . NOT_EQ sumExpression
   72              | sumExpression . EQUAL sumExpression
   73              | sumExpression .
   74 sumExpression: sumExpression . ADD term
   75              | sumExpression . SUBTRACT term

    ADD           shift, and go to state 91
    SUBTRACT      shift, and go to state 92
    GREATER_THAN  shift, and go to state 93
    LESSER_THAN   shift, and go to state 94
    LESS_EQ       shift, and go to state 95
    GREATER_EQ    shift, and go to state 96
    NOT_EQ        shift, and go to state 97
    EQUAL         shift, and go to state 98

    ADD       [reduce using rule 73 (relExpression)]
    SUBTRACT  [reduce using rule 73 (relExpression)]
    $default  reduce using rule 73 (relExpression)


State 50

   76 sumExpression: term .
   77 term: term . MULTIPLY unaryExpression
   78     | term . DIVIDE unaryExpression

    MULTIPLY  shift, and go to state 99
    DIVIDE    shift, and go to state 100

    $default  reduce using rule 76 (sumExpression)


State 51

   79 term: unaryExpression .

    $default  reduce using rule 79 (term)


State 52

   82 unaryExpression: factor .

    $default  reduce using rule 82 (unaryExpression)


State 53

   84 factor: mutable .
   86 mutable: mutable . '[' expression ']'

    '['  shift, and go to state 101

    $default  reduce using rule 84 (factor)


State 54

   83 factor: immutable .

    $default  reduce using rule 83 (factor)


State 55

   88 immutable: call .

    $default  reduce using rule 88 (immutable)


State 56

   89 immutable: const_type .

    $default  reduce using rule 89 (immutable)


State 57

   12 varDecId: identifier '[' INT_CONSTANT . ']'

    ']'  shift, and go to state 102


State 58

   19 funDeclaration: typeSpecifier identifier '(' params . ')' statement

    ')'  shift, and go to state 103


State 59

   27 paramId: IDENTIFIER '[' . ']'

    ']'  shift, and go to state 104


State 60

   41 selectionStmt: IF . '(' simpleExpression ')' statement
   42              | IF . '(' simpleExpression ')' statement ELSE statement

    '('  shift, and go to state 105


State 61

   45 iterationStmt: FOR . '(' optExpression ';' optExpression ';' optExpression ')' statement

    '('  shift, and go to state 106


State 62

   44 iterationStmt: DO . statement WHILE '(' expression ')' ';'

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    VOID          shift, and go to state 1
    IF            shift, and go to state 60
    FOR           shift, and go to state 61
    DO            shift, and go to state 62
    WHILE         shift, and go to state 63
    GOTO          shift, and go to state 64
    BREAK         shift, and go to state 65
    CONTINUE      shift, and go to state 66
    RETURN        shift, and go to state 67
    INT           shift, and go to state 2
    CHAR          shift, and go to state 3
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    ';'           shift, and go to state 68
    '('           shift, and go to state 44
    '{'           shift, and go to state 69

    varDeclaration      go to state 70
    typeSpecifier       go to state 71
    statement           go to state 107
    compoundStmt        go to state 73
    expressionStmt      go to state 74
    selectionStmt       go to state 75
    iterationStmt       go to state 76
    jumpStmt            go to state 77
    returnStmt          go to state 78
    breakStmt           go to state 79
    expression          go to state 80
    simpleExpression    go to state 81
    andExpression       go to state 46
    unaryRelExpression  go to state 47
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 82
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 63

   43 iterationStmt: WHILE . '(' simpleExpression ')' statement

    '('  shift, and go to state 108


State 64

   48 jumpStmt: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 109


State 65

   52 breakStmt: BREAK . ';'

    ';'  shift, and go to state 110


State 66

   49 jumpStmt: CONTINUE . ';'

    ';'  shift, and go to state 111


State 67

   50 returnStmt: RETURN . ';'
   51           | RETURN . expression

    ADD           shift, and go to state 37
    SUBTRACT      shift, and go to state 38
    NOT           shift, and go to state 39
    HEX_CONSTANT  shift, and go to state 40
    DEC_CONSTANT  shift, and go to state 41
    INT_CONSTANT  shift, and go to state 42
    IDENTIFIER    shift, and go to state 43
    ';'           shift, and go to state 112
    '('           shift, and go to state 44

    expression          go to state 113
    simpleExpression    go to state 81
    andExpression       go to state 46
    unaryRelExpression  go to state 47
    relExpression       go to state 48
    sumExpression       go to state 49
    term                go to state 50
    unaryExpression     go to state 51
    factor              go to state 52
    mutable             go to state 82
    immutable           go to state 54
    call                go to state 55
    const_type          go to state 56


State 68

   40 expressionStmt: ';' .

    $default  reduce using rule 40 (expressionStmt)


State 69

   36 compoundStmt: '{' . statementList '}'

    $default  reduce using rule 38 (statementList)

    statementList  go to state 114


State 70

   35 statement: varDeclaration .

    $default  reduce using rule 35 (statement)


State 71

    6 varDeclaration: typeSpecifier . varDeclList ';'
   13 typeSpecifier: typeSpecifier . pointer

    MULTIPLY    shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    varDeclList        go to state 16
    varDeclInitialize  go to state 17
    varDecId           go to state 18
    pointer            go to state 19
    identifier         go to state 36


State 72

   20 funDeclaration: IDENTIFIER '(' params ')' statement .

    $default  reduce using rule 20 (funDeclaration)


State 73

   29 statement: compoundStmt .

    $default  reduce using rule 29 (statement)


State 74

   28 statement: expressionStmt .

    $default  reduce using rule 28 (statement)


State 75

   30 statement: selectionStmt .

    $default  reduce using rule 30 (statement)


State 76

   31 statement: iterationStmt .

    $default  reduce using rule 31 (statement)


State 77

   32 statement: jumpStmt .

    $default  reduce using rule 32 (statement)


State 78

   33 statement: returnStmt .

    $default  reduce using rule 33 (statement)


State 79

   34 statement: breakStmt .

    $default  reduce using rule 34 (statement)


State 80
